# Robotics

lab1/: cammands.txt
lab2/ex01/: .bashrc
lab2/ex02/: list_exec_action_tutorials.txt  package_path_ros2topic.txt
lab2/ex03/: package.xml  setup.py
lab2/ex03/ex04/: colcon_build.txt
lab2/ex03/ex04/ex05/: rosnode_list.txt
lab2/ex05/: rosnode_info.txt
lab2/ex06/: cmd_vel.txt
lab2/ex07/: parameter_server.txt  rosservice_list.txt
lab2/ex08/: rqt_console.csv
lab2/ex09/full_name_pkg/: CMakeLists.txt  package.xml
lab2/ex09/full_name_pkg/srv/: FullNameSumService.srv
lab2/ex10/: ex10  package.xml  setup.cfg  setup.py
lab2/ex10/text_to_cmd_vel/: text_to_cmd_vel_node.py
lab3/ex01/: c.txt
lab3/ex01/a/: CMakeLists.txt  package.xml
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex01/service_full_name/service_full_name/: client_name.py  service_name.py
lab3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
lab3/ex02/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.mcap
lab3/ex03/: doctor.txt
lab3/ex04/move_to_goal/: package.xml  setup.py
lab3/ex04/move_to_goal/move_to_goal/: move_to_goal.py
lab3/ex05/action_cleaning_robot/: package.xml  setup.cfg  setup.py
lab3/ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_task_client.py  cleaning_task_server.py
lab3/ex05/action_cleaning_robot_interface/: CMakeLists.txt  package.xml
lab3/ex05/action_cleaning_robot_interface/action/: CleaningTask.action
