<?xml version="1.0"?>
<package format="3">
  <name>text_to_cmd_vel</name>
  <version>0.0.1</version>
  <description>ROS2 node to convert text commands to cmd_vel for turtlesim</description>
  <maintainer email="s.malyarchuk@g.nsu.ru">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
